--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile 'com.google.code.gson:gson:2.8.5'
+    compile "org.java-websocket:Java-WebSocket:1.3.9"
 }
 
 // Setting up my Jar File. In this case, adding all libraries into the main jar ('fat jar')
